fix overflow

--- a/step1/task3/style.css
+++ b/step1/task3/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 .wrapper {
-    /*overflow: auto;*/
+    overflow: hidden;
     padding: 20px;
     border: 1px solid #999;
     background-color: #eee;
@@ -54,8 +54,4 @@ body {
     height: 80px;
     margin: 10px 0;
     border: 1px solid #999;
-}
-
-.clearfix {
-    clear: both;
 }
